@@ -1,3 +1,8 @@
+* Optimize Class.create() and Class#addMethods and switch to using `this._super()`. [Joey Hurst, jddalton, John Resig]
+  Note: Backwards compatibility warning.
+    - The $super variable is no longer used to access a super's method.
+      Intead use `this._super()` in the body of the subclassed method. 
+
 * Rename Object.isOwnProperty() to Object.hasKey() and add Hash#hasKey. [apm, jddalton]
 
 * Remove internal use of the $super variable in Fuse. [jddalton]
